@@ -9,6 +9,8 @@ glibc (2.5-10) UNRELEASED; urgency=low
   * debian/sysdeps/depflags.pl: depends on libgcc1/libgcc2/libgcc4.
   * any/cvs-nscd-short-replies.diff: new patch from CVS to fix crash on
     short replies.
+  * sysdeps/depflags.mk, sysdeps/depflags.pl: use DEB_HOST_ARCH_OS and
+    DEB_HOST_ARCH instead of DEB_HOST_GNU_SYSTEM and DEB_HOST_GNU_TYPE.
 
   [ Clint Adams ]
   * debian/local/manpages/ld.so.8: quote accepted values for LD_DEBUG.
@@ -16,7 +18,7 @@ glibc (2.5-10) UNRELEASED; urgency=low
   * New Malayalam debconf translation, by Sajeev പിആര്‍.  closes:
     #426203.
 
- -- Aurelien Jarno <aurel32@debian.org>  Wed, 30 May 2007 14:42:41 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Wed, 30 May 2007 21:18:38 +0200
 
 glibc (2.5-9) unstable; urgency=low
 
